[tool.poetry]
name = "thudl"
version = "0.1.0"
description = ""
authors = ["poiet <1599023541@qq.com>"]
readme = "README.md"

[tool.poetry.scripts]
thudl = "thudl:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"